--- a/views/0-partials/message/show-message.ejs
+++ b/views/0-partials/message/show-message.ejs
@@ -52,7 +52,7 @@
                     </strong>
                     <br /> 
                     <a href="<%= foundMessage.link %>">
-                        <%= foundMessage.link %>
+                        Link to posting
                     </a>
                 </p>
 
