--- a/views/0-partials/user/profile.ejs
+++ b/views/0-partials/user/profile.ejs
@@ -3,12 +3,10 @@
     <div class="row">
 
         <!-- STUB left-side col -->
-        <div class="col-8">
+        <div class="col"></div>
 
-        </div>
-
-        <!-- STUB right-side col -->
-        <div class="col-4">
+        <!-- STUB middle col -->
+        <div class="col-6">
             <br />
 
             <!-- STUB profile card -->
@@ -27,6 +25,7 @@
                             <h4 class="card-title">
                                 username: 
                             </h4>
+                            <br />
                             <h6>
                                 jobRole:  
                                 <br />
@@ -35,14 +34,20 @@
                                 location
                             </h6>
                             <br />
+                            <br />
                         </div>
                             <a href="#" 
-                                class="btn btn-md btn-info"> 
+                                class="btn btn-lg btn-info btn-block"> 
                                 Edit Profile
                             </a>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- STUB right-side col -->
+        <div class="col">
+
         </div>
 
 
