--- a/views/0-partials/user/login.ejs
+++ b/views/0-partials/user/login.ejs
@@ -1,64 +1,88 @@
 
-<form class="form-signin"
-    <!-- action="/user/register"  -->
-    method="POST">>
+<div class="container">
+    <div class="row">
 
-    <!-- STUB form header -->
-    <div class="text-center mb-4">
+        <!-- STUB left-side col -->
+        <div class="col"></div>
 
-        <!-- STUB logo & intro -->
-        <img class="mb-4" 
-            src="/assets//logo/grapevine_grapevine.svg"  
-            alt="Grapevine logo" 
-            width="72" 
-            height="72" />
-        <h1 class="h3 mb-3 font-weight-normal">
-            Welcome Back
-        </h1>
-        <small>
-            Find the perfect job and grow your network along the way.
-        </small>
+
+            <!-- STUB middle col -->
+            <div class="col-5">
+                <br />
+
+                <div class="card shadow-lg ml-1 mt-4 rounded " 
+                        style="width: 25rem;">
+
+
+                    <form class="form-signin login-card"
+                        action="/user/login" 
+                        method="POST">
+
+                        <!-- STUB form header -->
+                        <div class="text-center mb-4">
+
+                            <!-- STUB logo & intro -->
+                            <br />
+                            <img class="mb-4" 
+                                src="/assets//logo/grapevine_grapevine.svg"  
+                                alt="Grapevine logo" 
+                                width="72" 
+                                height="72" />
+                            <h1 class="h3 mb-3 font-weight-normal">
+                                Welcome Back
+                            </h1>
+                            <small>
+                                Find the perfect job and grow your network along the way.
+                            </small>
+                        </div>
+
+                        <!-- STUB email -->
+                        <div class="form-label-group">
+                            <label for="inputEmail">
+                                Email address
+                            </label>
+                            <input type="email" 
+                                name="email" 
+                                class="form-control" />
+                        </div>
+
+                        <!-- STUB password -->
+                        <div class="form-label-group mb-2">
+                            <label for="inputPassword">
+                                Password
+                            </label>
+                            <input type="password" 
+                                name="password" 
+                                class="form-control" />
+                        </div>
+
+                        <!-- STUB checkbox -->
+                        <div class="checkbox mb-3">
+                            <label>
+                                <input type="checkbox" 
+                                    value="remember-me" /> 
+                                Remember me
+                            </label>
+                        </div>
+
+                        <!-- STUB sign in button -->
+                        <button class="btn btn-lg btn-info btn-block" 
+                            type="submit">
+                            Sign in
+                        </button>
+
+                        <!-- STUB form footer -->
+                        <p class="mt-5 mb-3 text-muted text-center pull-right">
+                            <a href="#">
+                                Forgot Password?
+                            </a>
+                        </p>
+                    </form>
+                </div>
+            </div>
+
+        <!-- STUB right-side col -->
+        <div class="col"></div>
+
     </div>
-
-    <!-- STUB email -->
-    <div class="form-label-group">
-        <input type="email" 
-            name="email" 
-            class="form-control" 
-            placeholder="Email address" />
-        <label for="inputEmail">
-            Email address
-        </label>
-    </div>
-
-    <!-- STUB password -->
-    <div class="form-label-group">
-        <input type="password" 
-            name="password" 
-            class="form-control" 
-            placeholder="Password" />
-        <label for="inputPassword">
-            Password
-        </label>
-    </div>
-
-    <!-- STUB checkbox -->
-    <div class="checkbox mb-3">
-        <label>
-            <input type="checkbox" 
-                value="remember-me" /> 
-            Remember me
-        </label>
-    </div>
-
-    <!-- STUB sign in button -->
-    <button class="btn btn-lg btn-primary btn-block" 
-        type="submit">
-        Sign in
-    </button>
-
-    <!-- STUB form footer -->
-    <p class="mt-5 mb-3 text-muted text-center">
-        © 2020
-    </p>
-</form>
+</div>
