--- a/views/0-partials/headers-sum/navbar/modal-register.ejs
+++ b/views/0-partials/headers-sum/navbar/modal-register.ejs
@@ -44,7 +44,7 @@
                             required />
                         <small id="emailHelp" 
                             class="form-text text-muted">
-                            
+                            4 characters min required. 20 characters max.
                         </small>
                     </p>
                     
@@ -76,10 +76,6 @@
                             maxlength="25" 
                             minlength="4"
                             required />
-                        <small id="emailHelp" 
-                            class="form-text text-muted">
-                            25 characters max. 4 characters min required.
-                        </small>
                     </p>
 
                     <!-- STUB confirm password -->
@@ -89,7 +85,7 @@
                         </label>
                         <input type="password" 
                             class="form-control mb-4" 
-                            name="password" 
+                            name="password2" 
                             maxlength="25" 
                             minlength="4"
                             placeholder="re-enter your password" 
