--- a/views/0-partials/message/index-message.ejs
+++ b/views/0-partials/message/index-message.ejs
@@ -34,7 +34,7 @@
                     <% allMessages.forEach(message => { %>
                         <li class="list-group-item">
                             <small>
-                                <%= message.createdAt%>
+                                <%= moment(message.createdAt).format("MMM Do YY") %>
                             </small>
                             <br/> 
                             <a href="/messages/<%= message._id %>"> 
