--- a/views/0-partials/user/profile.ejs
+++ b/views/0-partials/user/profile.ejs
@@ -23,15 +23,15 @@
                         <!-- STUB card information -->
                         <div class="card-profile-info">
                             <h4 class="card-title">
-                                username: 
+                                <%= thisUser.username %> 
                             </h4>
-                            <br />
                             <h6>
-                                jobRole:  
+                                    Deets:
+                                <%= thisUser.jobRole %>   
                                 <br />
-                                company
+                                <%= thisUser.company %> 
                                 <br />
-                                location
+                                <%= thisUser.location %> 
                             </h6>
                             <br />
                             <br />
