--- a/views/user-pages/edit.ejs
+++ b/views/user-pages/edit.ejs
@@ -15,7 +15,8 @@
     <!-- STUB main -->
     <main class="main">
 
-
+        <!-- STUB edit profile card -->
+        <%- include ("../0-partials/user/edit-profile.ejs") -%>
 
     </main>
 
