--- a/views/0-partials/message/edit-message.ejs
+++ b/views/0-partials/message/edit-message.ejs
@@ -11,7 +11,8 @@
             </h4>
             <div class="card-body">   
                 
-                <form action="/messages/<%= foundMessage._id %>?_method=PUT" method="POST">
+                <form action="/messages/<%= foundMessage._id %>?_method=PUT"
+                    method="POST">
 
                     <!-- STUB content param -->
                     <p>
