--- a/views/0-partials/user/edit-profile.ejs
+++ b/views/0-partials/user/edit-profile.ejs
@@ -5,47 +5,107 @@
         <div class="card shadow-lg ml-5 mt-4 rounded" 
             style="width: 40rem;">
             <h4 class="card-header alert alert-info">
-                Edit Profile
+                Update Profile
             </h4>
             <div class="card-body">   
                 
-                <form action="/user/<%= user._id%>?_method=PUT" method="POST">
+                <form action="/user/<%= foundUser._id%>?_method=PUT" 
+                    method="POST">
 
-                    <!-- STUB username param -->
+                    <!-- STUB current picture -->
                     <div class="form-group user-edit-form">
-                        <img src="<%= user.profilePic %>" 
+                        <img src="<%= foundUser.profilePic %>" 
                             style="width:200px;height:200px;" />
                     </div>
+
                     <div class="form-group">
-                            <label>
-                                Username - cannot be changed
-                            </label>
-                            <input type="text" 
-                                class="form-control" 
-                                placeholder="<%= user.username %>" 
-                                disabled />
-                        </div>
-                        <div class="form-group">
+
+                        <!-- STUB username -->
                         <label>
-                            Upload Profile Picture here - URL ONLY
+                            Username
+                            <br />
+                        </label>
+                        <input type="text" 
+                            class="form-control" 
+                            placeholder="<%= foundUser.username %>" 
+                            disabled />
+                        <small>
+                            cannot be changed.
+                        </small>
+                    </div>
+
+                    <p>
+                        <!-- STUB profilePic -->
+                        <label>
+                            Upload new profile picture 
                         </label>
                         <input type="url" 
                             class="form-control" 
-                            name="profilePic" 
-                            value="<%= user.profilePic %>" />
-                    </div class="my-4">
+                            name="profilePic" />
+                        <small>
+                            URL only
+                            
+                        </small>
+                        <br /><br />
+
+                        <!-- STUB jobRole -->
+                        <label>
+                            Job Title
+                        </label>
+                        <input type="text" 
+                            class="form-control" 
+                            placeholder="<%= foundUser.jobRole %>" />
+                        <small>
+                            i.e. open to work
+                        </small>
+                        <br /><br />
+
+                        <!-- STUB company -->
+                        <label>
+                            Company
+                        </label>
+                        <input type="text" 
+                            class="form-control" 
+                            placeholder="<%= foundUser.company %>" />
+                        <small>
+                            i.e. Grapevine
+                        </small>
+                        <br /><br />
+
+                        <!-- STUB location -->
+                        <label>
+                            Location
+                        </label>
+                        <input type="text" 
+                            class="form-control" 
+                            placeholder="<%= foundUser.location %>" />
+                        <small>
+                            i.e. San Francisco Bay Area
+                        </small>
+                        <br /><br />
+                        
+                    </p >
+
                     
                     <!-- STUB new message button -->
                     <button type="submit" 
-                        class="btn btn-sm btn-info">
+                        class="btn btn-sm btn-info my-4">
                         Update Post
                     </button>
 
                     <!-- STUB cancel button -->
-                    <a href="/messages/<%= foundMessage._id%>" 
+                    <a href="/user/<%= foundUser._id%>" 
                         class="btn btn-sm btn-secondary"> 
                         Cancel
                     </a>
+
+                    <!-- STUB delete button -->
+                    <form action="/user/<%= foundUser._id %>?_method=DELETE" method="POST">
+                        <input type="submit" 
+                            class="btn btn-sm btn-danger pull-right" 
+                            value="Delete" />
+                    </form>
+
                 </form>
             </div>
         </div>
