--- a/views/0-partials/user/profile.ejs
+++ b/views/0-partials/user/profile.ejs
@@ -16,17 +16,19 @@
                     <!-- STUB profile picture -->
                     <div class="card shadow-lg ml-5 mt-4 rounded profile-gradient" 
                         style="width: 20rem;">
-                        <img src="/assets/flaticon/user.svg" 
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/User_Avatar.png" 
                             class="card-profile-img" 
                             alt="profile picture" />
                     
                         <!-- STUB card information -->
                         <div class="card-profile-info">
-                            <h4 class="card-title">
+                            <h3 class="card-title my-2">
                                 <%= thisUser.username %> 
-                            </h4>
-                            <h6>
-                                    Deets:
+                            </h3>
+
+                            <h6 class="my-4">
+                                About
+                                <hr />
                                 <%= thisUser.jobRole %>   
                                 <br />
                                 <%= thisUser.company %> 
@@ -36,10 +38,13 @@
                             <br />
                             <br />
                         </div>
-                            <a href="#" 
-                                class="btn btn-lg btn-info btn-block"> 
-                                Edit Profile
-                            </a>
+
+                        <!-- STUB edit button -->
+                        <a href="/user/<%= thisUser._id %>/edit" 
+                            class="btn btn-lg btn-info btn-block"> 
+                            Edit Profile
+                        </a>
+
                     </div>
                 </div>
             </div>
