--- a/views/0-partials/user/edit-profile.ejs
+++ b/views/0-partials/user/edit-profile.ejs
@@ -14,8 +14,13 @@
 
                     <!-- STUB current picture -->
                     <div class="form-group user-edit-form">
+                        <small>
+                            your current picture
+                        </small>
+                        <br />
                         <img src="<%= foundUser.profilePic %>" 
                             style="width:200px;height:200px;" />
+                        <hr class="my-4/>
                     </div>
 
                     <div class="form-group">
@@ -40,11 +45,11 @@
                             Upload new profile picture 
                         </label>
                         <input type="url" 
-                            class="form-control" 
+                            class="form-control"
+                            required
                             name="profilePic" />
                         <small>
                             URL only
-                            
                         </small>
                         <br /><br />
 
@@ -54,6 +59,8 @@
                         </label>
                         <input type="text" 
                             class="form-control" 
+                            name="jobRole"
+                            required
                             placeholder="<%= foundUser.jobRole %>" />
                         <small>
                             i.e. open to work
@@ -65,7 +72,9 @@
                             Company
                         </label>
                         <input type="text" 
-                            class="form-control" 
+                            class="form-control"
+                            name="company" 
+                            required
                             placeholder="<%= foundUser.company %>" />
                         <small>
                             i.e. Grapevine
@@ -78,6 +87,8 @@
                         </label>
                         <input type="text" 
                             class="form-control" 
+                            name="location"
+                            required
                             placeholder="<%= foundUser.location %>" />
                         <small>
                             i.e. San Francisco Bay Area
@@ -90,7 +101,7 @@
                     <!-- STUB new message button -->
                     <button type="submit" 
                         class="btn btn-sm btn-info my-4">
-                        Update Post
+                        Update
                     </button>
 
                     <!-- STUB cancel button -->
@@ -98,13 +109,6 @@
                         class="btn btn-sm btn-secondary"> 
                         Cancel
                     </a>
-
-                    <!-- STUB delete button -->
-                    <form action="/user/<%= foundUser._id %>?_method=DELETE" method="POST">
-                        <input type="submit" 
-                            class="btn btn-sm btn-danger pull-right" 
-                            value="Delete" />
-                    </form>
 
                 </form>
             </div>
