--- a/views/0-partials/user/profile.ejs
+++ b/views/0-partials/user/profile.ejs
@@ -49,7 +49,7 @@
                         <form action="/user/<%= thisUser._id %>?_method=DELETE" method="POST">
                             <input type="submit" 
                                 class="btn btn-sm btn-danger btn-block" 
-                                value="Delete" />
+                                value="delete profile" />
                         </form>
 
                     </div>
