has full CRUD on models Message and User. auth and sessions have been commented out while registration page is under construction

--- a/views/0-partials/message/new-message.ejs
+++ b/views/0-partials/message/new-message.ejs
@@ -16,8 +16,7 @@ https://bootsnipp.com/snippets/9gW
 
             <!-- STUB form body -->
             <div class="card-body">                
-                <form action="/messages" 
-                method="POST">
+                <form action="/messages" method="POST">
 
                     <!-- STUB jobRole param -->
                     <p>
