--- a/views/user-pages/login.ejs
+++ b/views/user-pages/login.ejs
@@ -12,7 +12,7 @@
 
     <main class="main">
         <!-- STUB login form -->
-        <%- include ("../0-partials/user/login.ejs") -%>
+        <%- include ("../0-partials/user-partials/login.ejs") -%>
     </main>
 
     <!-- STUB Footer -->
