last updates for capstone presentation

--- a/views/0-partials/landing-partials/jumbotron.ejs
+++ b/views/0-partials/landing-partials/jumbotron.ejs
@@ -30,7 +30,7 @@
         </div>
         
 
-        <!-- SVG -->
+        <!-- STUB SVG  -->
         <div class="col-md-3 home-paragraph">
             <div class="container" >
                 <img src="/assets/undraw_images/undraw_remote_meeting_cbfk.svg" alt="undraw_professional_card" id="undraw">
