--- a/views/0-partials/message-partials/show-message.ejs
+++ b/views/0-partials/message-partials/show-message.ejs
@@ -69,7 +69,7 @@
                     <div>
                         <a href="/messages/<%= foundMessage._id %>/edit" 
                             class="btn btn-sm btn-info">
-                            Edit Message
+                            Edit Post
                         </a>
 
                         <!-- STUB cancel button -->
